# flatpak-automatic

./: .bandit.yml  .coverage  .gitignore  .mypy.ini  .pre-commit-config.yaml  .version_manifest  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MAINTAINERS.md  Makefile  README.md  VERSION  gpt.key  index.html  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini  renovate.json  sitemap.xml  tbump.toml
.debian/: control
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md  security-insights.yml
agents/: index.html
assets/: flatpak-automatic.desktop
changelog/: index.html
config/: config.default.yaml  config.example.yaml  config.user.default.yaml  config.yaml  config.yaml.example  env.conf
debian/: control  copyright  flatpak-automatic-doc.docs  flatpak-automatic.install  flatpak-automatic.lintian-overrides  flatpak-automatic.manpages  flatpak-automatic.service  flatpak-automatic.timer  postinst  postrm  rules
debs/: flatpak-automatic_1.5.14~rc3-1_all.deb  flatpak-automatic_1.5.15~rc1-1_all.deb  flatpak-automatic_1.5.17-1_all.deb  flatpak-automatic_1.5.17~rc1-1_all.deb  flatpak-automatic_1.5.17~rc3-1_all.deb  flatpak-automatic_1.5.18-1_all.deb  flatpak-automatic_1.5.20-1_all.deb  flatpak-automatic_1.5.22-1_all.deb  flatpak-automatic_1.5.23-1_all.deb  flatpak-automatic_1.5.24-1_all.deb  flatpak-automatic_1.5.25-1_all.deb  flatpak-automatic_1.5.27-1_all.deb  flatpak-automatic_1.5.30-1_all.deb  flatpak-automatic_1.5.31-1_all.deb
development/: index.html
docs/: development.md  (+3 more)
(+550 files in other folders)
